--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -51,5 +51,20 @@
     "bet-void-n50": "{{button}}에 베팅하려면 먼저 플레이어, 뱅커 또는 타이에 베팅해야 합니다",
     "winner": "승자",
     "payout-no-initial-bet": "지불금에는 초기 베팅이 포함되지 않습니다.",
-    "payout-includes-initial-bet": "지불금에는 초기 베팅이 포함됩니다."
+    "payout-includes-initial-bet": "지불금에는 초기 베팅이 포함됩니다.",
+    "game": "게임",
+    "features": "기능",
+    "htp": {
+        "general": {
+            "title": "일반",
+            "content": {
+                "paragraph-1": "게임에 참여하려면 베팅을 커버할 충분한 자금이 있어야 합니다. 현재 잔액은 화면의 왼쪽 하단에서 확인할 수 있습니다.",
+                "paragraph-2": "총 베팅 지표는 현재 라운드에서 배치한 총 베팅 금액을 표시합니다.",
+                "paragraph-3": "테이블에서 허용되는 최소 및 최대 베팅 금액을 표시하며 언제든지 변경될 수 있습니다. 또한 현재 기간의 고유 코드와 플레이 중인 게임의 이름이 표시됩니다.",
+                "paragraph-4": "타이머는 베팅을 할 수 있는 남은 시간을 알려줍니다. 시간이 만료되면 베팅이 종료되고 더 이상 베팅을 받을 수 없습니다. 베팅 시간이 만료되면 베팅이 라운드에 참여하도록 수락되었다면 '베팅 수락됨' 확인 메시지를 받게 됩니다. 그렇지 않으면 '모든 베팅이 수락되지 않음' 또는 '베팅 거부됨' 알림을 받게 됩니다.",
+                "paragraph-5": "칩 디스플레이를 통해 베팅할 칩의 가치를 선택할 수 있습니다. 화면 하단의 취소, 두 배, 다시 베팅 버튼 근처에 있는 칩을 클릭하여 사용할 수 있는 모든 칩 가치를 확인할 수 있습니다. 현재 잔액으로 사용할 수 있는 칩 가치만 선택할 수 있습니다."
+            },
+            "game-name": "게임 이름"
+        }
+    }
 }
