--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -51,5 +51,20 @@
     "bet-void-n50": "คุณต้องวางเดิมพันกับผู้เล่นหรือเจ้ามือหรือเสมอก่อนเพื่อที่จะเดิมพันที่ {{button}}",
     "winner": "ผู้ชนะ",
     "payout-no-initial-bet": "การจ่ายเงินไม่รวมเงินเดิมพันเริ่มต้น",
-    "payout-includes-initial-bet": "การจ่ายเงินรวมถึงเงินเดิมพันเริ่มต้น"
+    "payout-includes-initial-bet": "การจ่ายเงินรวมถึงเงินเดิมพันเริ่มต้น",
+    "game": "เกม",
+    "features": "คุณสมบัติ",
+    "htp": {
+        "general": {
+            "title": "ทั่วไป",
+            "content": {
+                "paragraph-1": "คุณต้องมีเงินเพียงพอที่จะครอบคลุมการเดิมพันของคุณเพื่อเข้าร่วมในเกม ยอดเงินปัจจุบันของคุณสามารถดูได้ที่ด้านล่างซ้ายของหน้าจอของคุณ",
+                "paragraph-2": "ตัวบ่งชี้ยอดเดิมพันทั้งหมดจะแสดงจำนวนเงินเดิมพันทั้งหมดที่คุณวางสำหรับรอบปัจจุบัน",
+                "paragraph-3": "แสดงจำนวนเงินเดิมพันขั้นต่ำและสูงสุดที่อนุญาตบนโต๊ะและสามารถเปลี่ยนแปลงได้ตลอดเวลา นอกจากนี้ยังแสดงรหัสเฉพาะของรอบปัจจุบันและชื่อเกมที่คุณกำลังเล่น",
+                "paragraph-4": "ตัวจับเวลาจะแสดงเวลาที่เหลือสำหรับการวางเดิมพัน เมื่อเวลาหมด การเดิมพันจะปิด และจะไม่รับเดิมพันอีกต่อไป เมื่อเวลาหมด คุณจะได้รับการยืนยัน 'รับเดิมพันแล้ว' หากการเดิมพันของคุณได้รับการยอมรับให้เข้าร่วมในรอบเกม มิฉะนั้นคุณจะได้รับการแจ้งเตือนว่า 'ไม่รับเดิมพันทั้งหมด' หรือ 'เดิมพันถูกปฏิเสธ'",
+                "paragraph-5": "หน้าจอชิปช่วยให้คุณเลือกมูลค่าของชิปแต่ละรายการที่คุณต้องการเดิมพันได้ คุณสามารถเลือกมูลค่าชิปสำหรับเดิมพันโดยคลิกที่ชิปที่ด้านล่างของหน้าจอใกล้ปุ่มยกเลิก, สองเท่า และเดิมพันใหม่ เพื่อดูมูลค่าชิปทั้งหมดที่มีให้เลือก สามารถเลือกมูลค่าชิปที่ใช้ได้กับยอดเงินปัจจุบันของคุณเท่านั้น"
+            },
+            "game-name": "ชื่อเกม"
+        }
+    }
 }
