--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -51,5 +51,20 @@
     "bet-void-n50": "Bạn phải đặt cược vào Người chơi hoặc Nhà cái hoặc Hòa trước để đặt cược vào {{button}}",
     "winner": "người thắng",
     "payout-no-initial-bet": "Tiền thưởng không bao gồm tiền cược ban đầu.",
-    "payout-includes-initial-bet": "Tiền thưởng bao gồm tiền cược ban đầu."
+    "payout-includes-initial-bet": "Tiền thưởng bao gồm tiền cược ban đầu.",
+    "game": "trò chơi",
+    "features": "tính năng",
+    "htp": {
+        "general": {
+            "title": "Tổng quát",
+            "content": {
+                "paragraph-1": "Bạn phải có đủ tiền để đặt cược để tham gia trò chơi. Số dư hiện tại của bạn có thể được xem ở góc dưới bên trái của màn hình.",
+                "paragraph-2": "Chỉ báo TỔNG CƯỢC hiển thị tổng số tiền cược mà bạn đã đặt cho vòng hiện tại.",
+                "paragraph-3": "Hiển thị số tiền cược tối thiểu và tối đa được phép trên bàn và có thể thay đổi bất cứ lúc nào. Nó cũng hiển thị mã duy nhất của kỳ hiện tại và tên của trò chơi bạn đang chơi.",
+                "paragraph-4": "Bộ đếm thời gian sẽ cho bạn biết thời gian đặt cược. Khi thời gian hết, việc đặt cược sẽ đóng lại và không chấp nhận thêm cược nữa. Khi thời gian đặt cược kết thúc, bạn sẽ nhận được xác nhận 'cược đã được chấp nhận' nếu cược của bạn đã được chấp nhận để tham gia vào vòng chơi; nếu không, bạn sẽ nhận được thông báo 'Không chấp nhận tất cả các cược' hoặc 'Cược bị từ chối'.",
+                "paragraph-5": "Màn hình chip cho phép bạn chọn giá trị của mỗi chip bạn muốn đặt cược. Bạn có thể chọn giá trị chip cho cược bằng cách nhấp vào chip ở cuối màn hình gần các nút Hủy, Nhân đôi và Đặt lại để xem tất cả các giá trị chip có sẵn. Chỉ những giá trị chip có thể được sử dụng với số dư hiện tại của bạn mới có thể được chọn."
+            },
+            "game-name": "Tên Trò Chơi"
+        }
+    }
 }
