--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -51,5 +51,20 @@
     "bet-void-n50": "您必须先对闲家、庄家或平局下注，才能对 {{button}} 下注",
     "winner": "赢家",
     "payout-no-initial-bet": "支付不包括初始投注。",
-    "payout-includes-initial-bet": "支付包括初始投注。"
+    "payout-includes-initial-bet": "支付包括初始投注。",
+    "game": "游戏",
+    "features": "功能",
+    "htp": {
+        "general": {
+            "title": "一般",
+            "content": {
+                "paragraph-1": "您必须有足够的资金来支付您的投注以参与游戏。 您当前的余额可以在屏幕左下角看到。",
+                "paragraph-2": "总投注指示器显示您为当前回合所下的总投注金额。",
+                "paragraph-3": "显示桌上允许的最小和最大投注额，并且可以随时更改。 它还显示当前期的唯一代码和您正在玩的游戏名称。",
+                "paragraph-4": "计时器将告诉您投注需要多少时间。 一旦时间过期，投注将关闭，不能再接受更多投注。 当投注时间过期后，如果您的投注被接受参与游戏回合，您将收到“投注已接受”的确认； 否则，您将收到“并非所有投注均被接受”或“投注被拒绝”的通知。",
+                "paragraph-5": "筹码显示允许您选择您要投注的每个筹码的值。 您可以通过单击屏幕底部靠近撤消、加倍和重新投注按钮的筹码来选择投注的筹码值，以查看所有可用的筹码值。 只有可以与您当前余额一起使用的筹码值才能被选择。"
+            },
+            "game-name": "游戏名称"
+        }
+    }
 }
