add how to play features

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -67,7 +67,18 @@
             "game-name": "Game Name"
         },
         "menu": {
-            "title": "menu"
+            "title": "Menu",
+            "description": "Additional buttons to make it easier for players to play the game.",
+            "content": {
+                "paragraph-1": "The Undo button will remove one chip you previously placed on the table.",
+                "paragraph-2": "Doubles the number of chips you have placed. Make sure your account balance is sufficient to double all bets placed.",
+                "paragraph-3": "Allows you to repeat the bet you placed on the previous round at the table.",
+                "paragraph-4": "The Burger menu provides essential menus for the game.",
+                "paragraph-5": "Disguise the display of chips that you have placed on the table.",
+                "paragraph-6": "To display the Statistics of the game in progress.",
+                "paragraph-7": "To save and use each player's favorite bets.",
+                "paragraph-8": "Show or hide the Roadmap / Game Statistics."
+            }
         }
     }
 }
