--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -65,6 +65,20 @@
                 "paragraph-5": "หน้าจอชิปช่วยให้คุณเลือกมูลค่าของชิปแต่ละรายการที่คุณต้องการเดิมพันได้ คุณสามารถเลือกมูลค่าชิปสำหรับเดิมพันโดยคลิกที่ชิปที่ด้านล่างของหน้าจอใกล้ปุ่มยกเลิก, สองเท่า และเดิมพันใหม่ เพื่อดูมูลค่าชิปทั้งหมดที่มีให้เลือก สามารถเลือกมูลค่าชิปที่ใช้ได้กับยอดเงินปัจจุบันของคุณเท่านั้น"
             },
             "game-name": "ชื่อเกม"
+        },
+        "menu": {
+            "title": "เมนู",
+            "description": "ปุ่มเพิ่มเติมเพื่อให้ง่ายต่อการเล่นเกมสำหรับผู้เล่น",
+            "content": {
+                "paragraph-1": "ปุ่มย้อนกลับจะลบชิปที่คุณวางบนโต๊ะก่อนหน้านี้",
+                "paragraph-2": "เพิ่มจำนวนชิปที่คุณวางไว้เป็นสองเท่า ตรวจสอบให้แน่ใจว่ายอดเงินในบัญชีของคุณเพียงพอที่จะเพิ่มเงินเดิมพันทั้งหมดเป็นสองเท่า",
+                "paragraph-3": "อนุญาตให้คุณวางเดิมพันซ้ำที่คุณวางไว้ในรอบก่อนหน้าที่โต๊ะ",
+                "paragraph-4": "เมนูเบอร์เกอร์มีเมนูสำคัญสำหรับเกม",
+                "paragraph-5": "ซ่อนการแสดงชิปที่คุณวางบนโต๊ะ",
+                "paragraph-6": "เพื่อแสดงสถิติของเกมที่กำลังดำเนินอยู่",
+                "paragraph-7": "เพื่อบันทึกและใช้การเดิมพันที่ชื่นชอบของผู้เล่นแต่ละคน",
+                "paragraph-8": "แสดงหรือซ่อนแผนงาน / สถิติของเกม"
+            }
         }
     }
 }
