--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -65,6 +65,20 @@
                 "paragraph-5": "筹码显示允许您选择您要投注的每个筹码的值。 您可以通过单击屏幕底部靠近撤消、加倍和重新投注按钮的筹码来选择投注的筹码值，以查看所有可用的筹码值。 只有可以与您当前余额一起使用的筹码值才能被选择。"
             },
             "game-name": "游戏名称"
+        },
+        "menu": {
+            "title": "菜单",
+            "description": "提供额外的按钮，使玩家更容易玩游戏。",
+            "content": {
+                "paragraph-1": "撤消按钮将删除您之前放置在桌面上的一个筹码。",
+                "paragraph-2": "将您放置的筹码数量翻倍。请确保您的账户余额足够翻倍所有已下的赌注。",
+                "paragraph-3": "允许您重复上一轮在桌面上放置的赌注。",
+                "paragraph-4": "汉堡菜单提供游戏的基本菜单。",
+                "paragraph-5": "隐藏您放置在桌面上的筹码显示。",
+                "paragraph-6": "显示正在进行的游戏的统计信息。",
+                "paragraph-7": "保存和使用每位玩家的喜爱赌注。",
+                "paragraph-8": "显示或隐藏路线图/游戏统计信息。"
+            }
         }
     }
 }
