--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -65,6 +65,20 @@
                 "paragraph-5": "칩 디스플레이를 통해 베팅할 칩의 가치를 선택할 수 있습니다. 화면 하단의 취소, 두 배, 다시 베팅 버튼 근처에 있는 칩을 클릭하여 사용할 수 있는 모든 칩 가치를 확인할 수 있습니다. 현재 잔액으로 사용할 수 있는 칩 가치만 선택할 수 있습니다."
             },
             "game-name": "게임 이름"
+        },
+        "menu": {
+            "title": "메뉴",
+            "description": "게임을 쉽게 플레이할 수 있도록 추가 버튼이 제공됩니다.",
+            "content": {
+                "paragraph-1": "되돌리기 버튼은 이전에 테이블에 배치한 하나의 칩을 제거합니다.",
+                "paragraph-2": "배치한 칩의 수를 두 배로 늘립니다. 모든 베팅이 두 배가 되도록 계정 잔액이 충분한지 확인하세요.",
+                "paragraph-3": "테이블에서 이전 라운드에 배팅한 내역을 반복할 수 있습니다.",
+                "paragraph-4": "버거 메뉴는 게임을 위한 필수 메뉴를 제공합니다.",
+                "paragraph-5": "테이블에 배치한 칩의 표시를 숨깁니다.",
+                "paragraph-6": "진행 중인 게임의 통계를 표시합니다.",
+                "paragraph-7": "각 플레이어의 즐겨찾는 베팅을 저장하고 사용할 수 있습니다.",
+                "paragraph-8": "로드맵 / 게임 통계를 표시하거나 숨깁니다."
+            }
         }
     }
 }
