--- a/src/locales/zh/htp.json
+++ b/src/locales/zh/htp.json
@@ -139,6 +139,7 @@
             "heading": "50-50投注",
             "small": {
                 "title": "小",
+                "description": "",
                 "winning-conditions": "结果在1到12之间",
                 "examples": [
                     { "bet": "小", "result": "2", "status": "赢" },
@@ -147,6 +148,7 @@
             },
             "big": {
                 "title": "大",
+                "description": "",
                 "winning-conditions": "结果在12到24之间",
                 "examples": [
                     { "bet": "大", "result": "13", "status": "赢" },
@@ -155,6 +157,7 @@
             },
             "odd": {
                 "title": "奇数",
+                "description": "",
                 "winning-conditions": "结果是一个奇数",
                 "examples": [
                     { "bet": "奇数", "result": "13", "status": "赢" },
@@ -163,6 +166,7 @@
             },
             "even": {
                 "title": "偶数",
+                "description": "",
                 "winning-conditions": "结果是一个偶数",
                 "examples": [
                     { "bet": "偶数", "result": "12", "status": "赢" },
@@ -171,6 +175,7 @@
             },
             "red": {
                 "title": "红色",
+                "description": "",
                 "winning-conditions": "结果是红色",
                 "examples": [
                     { "bet": "红色", "result": "10", "status": "赢" },
@@ -179,6 +184,7 @@
             },
             "black": {
                 "title": "黑色",
+                "description": "",
                 "winning-conditions": "结果是黑色",
                 "examples": [
                     { "bet": "黑色", "result": "12", "status": "赢" },
