--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -85,8 +85,8 @@
                 "description": "수직/수평으로 인접한 두 숫자에 베팅",
                 "winning-conditions": "결과는 두 숫자 중 하나와 일치합니다",
                 "examples": [
-                    { "bet": "1, 2", "result": "1", "status": "승리" },
-                    { "bet": "1, 2", "result": "3", "status": "패배" }
+                    { "bet": "1,2", "result": "1", "status": "승리" },
+                    { "bet": "1,2", "result": "3", "status": "패배" }
                 ]
             },
             "corner": {
@@ -94,8 +94,8 @@
                 "description": "네 숫자가 모이는 코너에 베팅",
                 "winning-conditions": "결과가 네 숫자 중 하나와 일치합니다",
                 "examples": [
-                    { "bet": "1, 2, 5, 6", "result": "5", "status": "승리" },
-                    { "bet": "1, 2, 5, 6", "result": "13", "status": "패배" }
+                    { "bet": "1,2,5,6", "result": "5", "status": "승리" },
+                    { "bet": "1,2,5,6", "result": "13", "status": "패배" }
                 ]
             },
             "single-row": {
