--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -53,5 +53,6 @@
     "payout-no-initial-bet": "Tiền thưởng không bao gồm tiền cược ban đầu.",
     "payout-includes-initial-bet": "Tiền thưởng bao gồm tiền cược ban đầu.",
     "game": "trò chơi",
-    "features": "tính năng"
+    "features": "tính năng",
+    "shuffling-cards": "xào bài"
 }
