add no result yet

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -30,6 +30,7 @@
     "statistic": "statistic",
     "no-transactions": "no transactions",
     "no-result": "no result",
+    "no-results-yet": "no results yet",
     "hide": "hide",
     "show": "show",
     "favorite": "favorite",
