--- a/src/locales/ko/common.json
+++ b/src/locales/ko/common.json
@@ -30,6 +30,7 @@
     "statistic": "통계",
     "no-transactions": "거래 없음",
     "no-result": "결과 없음",
+    "no-results-yet": "결과 없음",
     "hide": "숨기기",
     "show": "보여주기",
     "favorite": "즐겨찾기",
