--- a/src/locales/th/common.json
+++ b/src/locales/th/common.json
@@ -30,6 +30,7 @@
     "statistic": "สถิติ",
     "no-transactions": "ไม่มีธุรกรรม",
     "no-result": "ไม่มีผลลัพธ์",
+    "no-results-yet": "ยังไม่มีผลลัพธ์",
     "hide": "ซ่อน",
     "show": "แสดง",
     "favorite": "รายการโปรด",
