--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -30,6 +30,7 @@
     "statistic": "thống kê",
     "no-transactions": "không có giao dịch",
     "no-result": "không có kết quả",
+    "no-results-yet": "chưa có kết quả",
     "hide": "ẩn",
     "show": "hiển thị",
     "favorite": "yêu thích",
