--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -30,6 +30,7 @@
     "statistic": "统计",
     "no-transactions": "无交易",
     "no-result": "无结果",
+    "no-results-yet": "还没有结果",
     "hide": "隐藏",
     "show": "显示",
     "favorite": "收藏",
