--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -30,6 +30,7 @@
     "statistic": "statistik",
     "no-transactions": "tidak ada transaksi",
     "no-result": "tidak ada hasil",
+    "no-results-yet": "belum ada hasil",
     "hide": "sembunyikan",
     "show": "tampilkan",
     "favorite": "favorit",
