--- a/src/locales/id/common.json
+++ b/src/locales/id/common.json
@@ -55,5 +55,7 @@
     "payout-includes-initial-bet": "Pembayaran termasuk taruhan awal.",
     "game": "permainan",
     "features": "fitur",
-    "shuffling-cards": "mengocok kartu"
+    "shuffling-cards": "mengocok kartu",
+    "complete-how-to-play": "Cara bermain lengkap",
+    "dont-show-again": "Jangan tampilkan lagi"
 }
