--- a/src/locales/vn/common.json
+++ b/src/locales/vn/common.json
@@ -55,5 +55,7 @@
     "payout-includes-initial-bet": "Tiền thưởng bao gồm tiền cược ban đầu.",
     "game": "trò chơi",
     "features": "tính năng",
-    "shuffling-cards": "xào bài"
+    "shuffling-cards": "xào bài",
+    "complete-how-to-play": "Hướng dẫn chơi",
+    "dont-show-again": "Tắt hiển thị"
 }
