add mini how to play dt wild

--- a/src/locales/en/mini-htp.json
+++ b/src/locales/en/mini-htp.json
@@ -2,19 +2,22 @@
     "slide-1": {
         "title": "How to Play",
         "content": [
-            "This is a game where a small ball is thrown into a spinning wheel that has 37 slots numbered from 0 to 36."
+            "Dragon Tiger Wild comes with the latest WILD CARD bonus! Get a bigger chance to win up to 127x!",
+            "You just need to guess the highest card and the wild card for even bigger prizes! LET'S GET WILD!!!"
         ]
     },
     "slide-2": {
-        "title": "Betting",
+        "title": "How to Play",
         "content": [
-            "You can bet on numbers, number ranges, colors, or whether the outcome is odd or even. Once your bet is placed, the wheel is spun and a ball is thrown in."
+            "This game is played with 3 cards. The 2 main cards (Dragon and Tiger) will compete to see which side has the highest value. 1 wild card is drawn to form a Wild Bonus combination.",
+            "You can bet on the Main Bets: Dragon/Tiger, or on Wild Bet combinations: Dragon Wild, Dragon Pair, or Tiger Wild, Tiger Pair, and Super Wild."
         ]
     },
     "slide-3": {
-        "title": "Game Outcome",
+        "title": "Wild Bonus",
         "content": [
-            "The ball will stop in one of the slots, and any bets that match the result will win."
+            "The wild card appears to create bonus combinations that can drastically increase your winnings up to 127x!",
+            "Place your bets on wild combinations and seize the chance for multiple WILD BONUS payouts!"
         ]
     }
 }
