--- a/src/locales/id/mini-htp.json
+++ b/src/locales/id/mini-htp.json
@@ -2,19 +2,22 @@
     "slide-1": {
         "title": "Cara Bermain",
         "content": [
-            "Permainan dimana 1 bola kecil dilemparkan kedalam Roda berputar yang memiliki 37 slot dengan angka dari 0 hingga 36 Angka."
+            "Dragon Tiger Wild hadir dengan bonus WILD CARD terbaru! Raih kesempatan menang yang lebih besar hingga 127x!",
+            "Anda hanya perlu menebak kartu tertinggi dan kartu wild untuk hadiah lebih besar!LET'S GET WILD!!!"
         ]
     },
     "slide-2": {
-        "title": "Taruhan",
+        "title": "Cara Bermain",
         "content": [
-            "Anda dapat bertaruh pada angka, rentang angka, warna atau apakah ganjil / genap. Setelah Anda memasang taruhan, Roda akan diputar dan 1 bola dilemparkan."
+            "Permainan ini dimainkan dengan 3 kartu. 2 kartu utama (Dragon dan Tiger) akan diadu sisi mana yang memiliki nilai tertinggi. 1 kartu Wild dikeluarkan untuk membentuk kombinasi Bonus Wild.",
+            "Anda dapat bertaruh pada Taruhan Utama: Dragon/Tiger. Atau pada kombinasi Taruhan Wild: Dragon Wild, Dragon Pair atau Tiger Wild, Tiger Pair dan Super Wild."
         ]
     },
     "slide-3": {
-        "title": "Hasil Permainan",
+        "title": "Bonus Wild",
         "content": [
-            "Bola akan berhenti disalah satu slot, dan taruhan yang sesuai dengan hasil tersebut akan menang."
+            "Kartu Wild hadir untuk membentuk kombinasi bonus yang dapat meningkatkan pembayaran kemenangan anda secara drastis hingga 127x!",
+            "Bertaruhlah pada kombinasi taruhan wild ,dan raih peluang BONUS WILD berkali-kali lipat!"
         ]
     }
 }
