--- a/src/locales/zh/mini-htp.json
+++ b/src/locales/zh/mini-htp.json
@@ -1,16 +1,23 @@
 {
     "slide-1": {
         "title": "玩法介绍",
-        "content": ["这是一个将小球抛入拥有37个编号为0到36的槽位的旋转轮中的游戏。"]
+        "content": [
+            "Dragon Tiger Wild 带来了最新的 WILD CARD 奖金！赢取高达127倍的机会！",
+            "您只需猜测最高的牌和 wild 牌，即可赢取更大奖励！LET'S GET WILD!!!"
+        ]
     },
     "slide-2": {
-        "title": "投注",
+        "title": "玩法介绍",
         "content": [
-            "您可以下注在数字、数字范围、颜色，或者是奇数/偶数。下注后，轮盘将旋转并投掷一个小球。"
+            "此游戏使用3张牌进行。2张主要牌（龙和虎）将比拼哪一方牌值更高。1张 wild 牌将被抽出以形成 Wild 奖金组合。",
+            "您可以投注主要投注：龙/虎，或者 wild 组合投注：龙 wild、龙对，或者虎 wild、虎对，以及超级 wild。"
         ]
     },
     "slide-3": {
-        "title": "游戏结果",
-        "content": ["小球将停在某个槽位，结果与下注相符的玩家将获胜。"]
+        "title": "Wild 奖金",
+        "content": [
+            "wild 牌出现以形成奖金组合，可将您的奖金提高至127倍！",
+            "投注 wild 组合，抓住多次 WILD 奖金的机会！"
+        ]
     }
 }
