--- a/src/locales/ko/mini-htp.json
+++ b/src/locales/ko/mini-htp.json
@@ -2,17 +2,22 @@
     "slide-1": {
         "title": "게임 방법",
         "content": [
-            "작은 공을 숫자 0부터 36까지 있는 37개의 슬롯이 있는 회전하는 바퀴에 던지는 게임입니다."
+            "드래곤 타이거 와일드는 최신 WILD CARD 보너스와 함께합니다! 최대 127배의 승리 기회를 잡으세요!",
+            "가장 높은 카드와 wild 카드를 예측하여 더 큰 보상을 받으세요! LET'S GET WILD!!!"
         ]
     },
     "slide-2": {
-        "title": "베팅",
+        "title": "게임 방법",
         "content": [
-            "숫자, 숫자 범위, 색깔, 또는 홀수/짝수에 베팅할 수 있습니다. 베팅을 한 후에는 바퀴가 회전하고 공이 던져집니다."
+            "이 게임은 3장의 카드로 진행됩니다. 2장의 주요 카드(드래곤과 타이거)가 높은 점수를 겨룹니다. 1장의 wild 카드가 와일드 보너스 조합을 형성합니다.",
+            "드래곤/타이거 주 베팅 또는 와일드 조합 베팅: 드래곤 와일드, 드래곤 페어, 타이거 와일드, 타이거 페어, 그리고 슈퍼 와일드에 베팅할 수 있습니다."
         ]
     },
     "slide-3": {
-        "title": "게임 결과",
-        "content": ["공이 슬롯 중 하나에 멈추면, 결과와 일치하는 베팅이 승리하게 됩니다."]
+        "title": "와일드 보너스",
+        "content": [
+            "wild 카드는 보너스 조합을 만들어 최대 127배까지 당신의 승리를 크게 증가시킵니다!",
+            "와일드 조합에 베팅하고 여러 번의 WILD 보너스 기회를 잡으세요!"
+        ]
     }
 }
