--- a/src/locales/th/mini-htp.json
+++ b/src/locales/th/mini-htp.json
@@ -1,16 +1,23 @@
 {
     "slide-1": {
         "title": "วิธีการเล่น",
-        "content": ["เกมที่ลูกบอลเล็ก ๆ ถูกโยนเข้าไปในวงล้อหมุนที่มี 37 ช่องตัวเลขตั้งแต่ 0 ถึง 36"]
+        "content": [
+            "Dragon Tiger Wild มาพร้อมกับโบนัส WILD CARD ล่าสุด! เพิ่มโอกาสในการชนะของคุณสูงสุดถึง 127 เท่า!",
+            "คุณเพียงแค่ทายว่าฝ่ายใดจะได้ไพ่ที่สูงที่สุดและทายไพ่ wild เพื่อรับรางวัลที่ใหญ่ขึ้น! LET'S GET WILD!!!"
+        ]
     },
     "slide-2": {
-        "title": "การเดิมพัน",
+        "title": "วิธีการเล่น",
         "content": [
-            "คุณสามารถเดิมพันตัวเลข ช่วงตัวเลข สี หรือว่าจะออกคี่หรือคู่ หลังจากคุณวางเดิมพัน วงล้อจะหมุนและลูกบอลจะถูกโยน"
+            "เกมนี้เล่นด้วยไพ่ 3 ใบ โดยมีไพ่หลัก 2 ใบ (Dragon และ Tiger) แข่งขันกันว่าไพ่ฝั่งไหนมีแต้มสูงกว่า และไพ่ wild 1 ใบจะถูกจั่วเพื่อสร้างชุดโบนัส Wild",
+            "คุณสามารถเดิมพันได้ที่การเดิมพันหลัก: Dragon/Tiger หรือชุดการเดิมพัน Wild: Dragon Wild, Dragon Pair หรือ Tiger Wild, Tiger Pair และ Super Wild"
         ]
     },
     "slide-3": {
-        "title": "ผลลัพธ์ของเกม",
-        "content": ["ลูกบอลจะหยุดที่หนึ่งในช่อง และการเดิมพันที่ตรงกับผลลัพธ์นั้นจะชนะ"]
+        "title": "โบนัส Wild",
+        "content": [
+            "ไพ่ wild จะมาสร้างชุดโบนัสที่สามารถเพิ่มการจ่ายเงินรางวัลของคุณอย่างมหาศาลได้ถึง 127 เท่า!",
+            "วางเดิมพันที่ชุด wild และลุ้นรับโอกาสโบนัส WILD หลายเท่าตัว!"
+        ]
     }
 }
