--- a/src/locales/vn/mini-htp.json
+++ b/src/locales/vn/mini-htp.json
@@ -2,19 +2,22 @@
     "slide-1": {
         "title": "Cách Chơi",
         "content": [
-            "Trò chơi này ném một quả bóng nhỏ vào bánh xe quay có 37 khe được đánh số từ 0 đến 36."
+            "Dragon Tiger Wild đi kèm với bonus WILD CARD mới nhất! Tăng cơ hội chiến thắng của bạn lên đến 127 lần!",
+            "Bạn chỉ cần đoán thẻ cao nhất và thẻ wild để nhận các phần thưởng lớn hơn! LET'S GET WILD!!!"
         ]
     },
     "slide-2": {
-        "title": "Đặt Cược",
+        "title": "Cách Chơi",
         "content": [
-            "Bạn có thể đặt cược vào con số, khoảng số, màu sắc hoặc số chẵn/lẻ. Sau khi bạn đặt cược, bánh xe sẽ quay và một quả bóng sẽ được ném vào."
+            "Trò chơi này chơi với 3 lá bài. 2 lá bài chính (Dragon và Tiger) sẽ cạnh tranh xem bên nào có giá trị cao hơn. 1 lá bài wild được rút ra để tạo thành kết hợp Bonus Wild.",
+            "Bạn có thể đặt cược vào các cược chính: Dragon/Tiger, hoặc vào các kết hợp cược wild: Dragon Wild, Dragon Pair hoặc Tiger Wild, Tiger Pair và Super Wild."
         ]
     },
     "slide-3": {
-        "title": "Kết Quả Trò Chơi",
+        "title": "Bonus Wild",
         "content": [
-            "Quả bóng sẽ dừng lại ở một trong các khe và các cược phù hợp với kết quả sẽ thắng."
+            "Thẻ wild xuất hiện để tạo ra các kết hợp bonus có thể tăng đáng kể tiền thắng cược của bạn lên đến 127 lần!",
+            "Đặt cược vào các kết hợp wild và giành cơ hội nhận nhiều lần BONUS WILD!"
         ]
     }
 }
